Add supervision-test for leaky num

--- a/src/chain/Makefile
+++ b/src/chain/Makefile
@@ -5,7 +5,7 @@ include ../kaldi.mk
 LDFLAGS += $(CUDA_LDFLAGS)
 LDLIBS += $(CUDA_LDLIBS)
 
-TESTFILES = chain-supervision-test language-model-test
+TESTFILES = chain-supervision-test language-model-test chain-supervision-test2
 
 OBJFILES = chain-supervision.o chain-numerator.o chain-den-graph.o \
           language-model.o chain-denominator.o chain-training.o \
