--- a/src/rnnlmbin/Makefile
+++ b/src/rnnlmbin/Makefile
@@ -8,8 +8,8 @@ LDFLAGS += $(CUDA_LDFLAGS)
 LDLIBS += $(CUDA_LDLIBS)
 
 BINFILES = rnnlm-get-egs rnnlm-eval rnnlm-train rnnlm-init rnnlm-copy rnnlm-info \
-           rnnlm-tmp
-#           rnnlm-compute-prob
+           rnnlm-tmp \
+           rnnlm-compute-prob
 
 OBJFILES =
 
