writing rnnlm-show-progress (in progress still)

--- a/src/rnnlmbin/Makefile
+++ b/src/rnnlmbin/Makefile
@@ -9,7 +9,7 @@ LDLIBS += $(CUDA_LDLIBS)
 
 BINFILES = rnnlm-get-egs rnnlm-eval rnnlm-train rnnlm-init rnnlm-copy rnnlm-info \
            rnnlm-tmp \
-           rnnlm-compute-prob
+           rnnlm-compute-prob rnnlm-show-progress
 
 OBJFILES =
 
