--- a/egs/babel/s5d/conf/lang/104-pashto-fullLP.official.conf
+++ b/egs/babel/s5d/conf/lang/104-pashto-fullLP.official.conf
@@ -10,7 +10,7 @@ train_nj=32
 dev2h_data_dir=/export/babel/data/104-pashto/release-current/conversational/dev
 dev2h_data_list=/export/babel/data/splits/Pashto_Babel104/dev2hr.list
 dev2h_stm_file=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev/IARPA-babel104b-v0.4bY_conv-dev.stm
-dev2h_ecf_file=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-eval.ecf.xml
+dev2h_ecf_file=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev.ecf.xml
 dev2h_rttm_file=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev/IARPA-babel104b-v0.4bY_conv-dev.mitllfa3.rttm
 dev2h_kwlist_file=/export/babel/data/splits/Pashto_Babel104/babel104b-v0.4bY_conv-dev.kwlist.xml
 dev2h_more_kwlists=(
@@ -24,16 +24,20 @@ dev2h_nj=18
 dev10h_data_dir=/export/babel/data/104-pashto/release-current/conversational/dev
 dev10h_data_list=/export/babel/data/splits/Pashto_Babel104/dev.list
 dev10h_stm_file=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev/IARPA-babel104b-v0.4bY_conv-dev.stm
-dev10h_ecf_file=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-eval.ecf.xml
+dev10h_ecf_file=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev.ecf.xml
 dev10h_rttm_file=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev/IARPA-babel104b-v0.4bY_conv-dev.mitllfa3.rttm
 dev10h_kwlist_file=/export/babel/data/splits/Pashto_Babel104/babel104b-v0.4bY_conv-dev.kwlist.xml
 dev10h_kwlists=(
                       [dev]=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev.kwlist.xml
                       [eval]=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev.kwlist2.xml
+                      [dev2]=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev.kwlist3.xml
+                      [eval16]=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev.kwlist4.xml
 )
 dev10h_more_kwlists=(
                       [dev]=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev.kwlist.xml
                       [eval]=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev.kwlist2.xml
+                      [dev2]=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev.kwlist3.xml
+                      [eval16]=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev.kwlist4.xml
 )
 dev10h_nj=32
 
