--- a/src/segmenterbin/Makefile
+++ b/src/segmenterbin/Makefile
@@ -19,7 +19,9 @@ BINFILES = segmentation-copy segmentation-get-stats \
 					 segmentation-init-from-additive-signals-info \
 					 class-counts-per-frame-to-labels \
 					 agglomerative-cluster-ib \
-					 intersect-int-vectors #\
+					 intersect-int-vectors \
+					 gmm-global-init-models-from-feats \
+					 segmentation-cluster-adjacent-segments #\
 					 gmm-acc-pdf-stats-segmentation \
 					 gmm-est-segmentation gmm-update-segmentation \
 					 segmentation-init-from-diarization \
