adding 40hrs pashto config and fixes for the unicode system

--- a/egs/babel/s5d/conf/lang/402-javanese.FLP.official.conf
+++ b/egs/babel/s5d/conf/lang/402-javanese.FLP.official.conf
@@ -29,6 +29,8 @@ dev10h_ecf_file=/export/babel/data/scoring/IndusDB/IARPA-babel402b-v1.0b_conv-de
 dev10h_stm_file=/export/babel/data/scoring/IndusDB/IARPA-babel402b-v1.0b_conv-dev/IARPA-babel402b-v1.0b_conv-dev.stm
 dev10h_kwlists=(
     [kwlist]=/export/babel/data/scoring/IndusDB/IARPA-babel402b-v1.0b_conv-dev/IARPA-babel402b-v1.0b_conv-dev.annot.kwlist.xml
+    [kwlist3]=/export/babel/data/scoring/IndusDB/IARPA-babel402b-v1.0b_conv-dev/IARPA-babel402b-v1.0b_conv-dev.annot.kwlist3.xml
+
 )  # dev10h_kwlists
 dev10h_nj=32
 
