asr_diarization: Fix merging with kaldi 5.1 master

--- a/src/segmenter/Makefile
+++ b/src/segmenter/Makefile
@@ -5,9 +5,9 @@ include ../kaldi.mk
 TESTFILES = segmentation-io-test information-bottleneck-clusterable-test
 
 OBJFILES = segment.o segmentation.o segmentation-utils.o \
-					 segmentation-post-processor.o \
-					 information-bottleneck-clusterable.o \
-					 information-bottleneck-cluster-utils.o
+					 segmentation-post-processor.o #\
+					 #information-bottleneck-clusterable.o \
+					 #information-bottleneck-cluster-utils.o
 
 LIBNAME = kaldi-segmenter
 
