--- a/src/simplehmmbin/Makefile
+++ b/src/simplehmmbin/Makefile
@@ -10,9 +10,9 @@ BINFILES = simple-hmm-init \
 
 OBJFILES =
 
-ADDLIBS = ../decoder/kaldi-decoder.a ../lat/kaldi-lat.a \
+ADDLIBS = ../decoder/kaldi-decoder.a \
+					../simplehmm/kaldi-simplehmm.a ../lat/kaldi-lat.a \
           ../fstext/kaldi-fstext.a ../hmm/kaldi-hmm.a \
-					../simplehmm/kaldi-simplehmm.a\
           ../util/kaldi-util.a ../thread/kaldi-thread.a \
           ../matrix/kaldi-matrix.a ../base/kaldi-base.a
 
